<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/drink">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Apptitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchByName"
            style="@style/cardviewitemsMain"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@+id/cvSearchByIngredient"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/cvSearchByFirstLetter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Apptitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:text="@string/searchbyname"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchByFirstLetter"
            style="@style/cardviewitemsMain"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/cvSearchByName"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvSearchByName"
            app:layout_constraintTop_toBottomOf="@id/Apptitle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:text="@string/searchfirstletter"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchByIngredient"
            style="@style/cardviewitemsMain"
            app:layout_constraintBottom_toTopOf="@id/btnRandom"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@id/cvSearchByName"
            app:layout_constraintStart_toStartOf="@id/cvSearchByName"
            app:layout_constraintTop_toBottomOf="@id/cvSearchByName">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:text="@string/searchingredient"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchByCategory"
            style="@style/cardviewitemsMain"
            app:layout_constraintBottom_toTopOf="@id/btnRandom"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@id/cvSearchByFirstLetter"
            app:layout_constraintStart_toStartOf="@id/cvSearchByFirstLetter"
            app:layout_constraintTop_toBottomOf="@id/cvSearchByFirstLetter">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:text="@string/searchcategoty"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/CardSearch"
            android:text="@string/btnRandom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>